--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "robofriends",
+  "homepage": "https://peterchencc.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
+    "gh-pages": "^3.1.0",
     "postcss": "^7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -21,7 +23,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
